# gemini-rag-example

./: .env.example  .gitignore  Article.md  README.md  pyproject.toml
data/: alice_in_wonderland.md  sample_notes.md
src/rag_demo/: __init__.py  cli.py  config.py  data_loader.py  pipeline.py
